--- a/.github/workflows/test_on_master.yml
+++ b/.github/workflows/test_on_master.yml
@@ -18,5 +18,5 @@ jobs:
     - name: Run tests
       run: | 
        xcodebuild clean test -project GOMS-iOS.xcodeproj \
-        -scheme GOMS \
+        -scheme GOMS-iOS \
         -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.5'
