--- a/.github/workflows/test_on_master.yml
+++ b/.github/workflows/test_on_master.yml
@@ -15,5 +15,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run tests
       run: | 
-        xcodebuild build -project GOMS-iOS/GOMS-iOS.xcodeproj
+        xcodebuild build -project GOMS-iOS.xcodeproj
 
