--- a/.github/workflows/test_on_master.yml
+++ b/.github/workflows/test_on_master.yml
@@ -15,4 +15,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run tests
       run: | 
-        xcodebuild build -project GOMS-iOS.xcodeproj
+        xcodebuild clean test -project GOMS-iOS.xcodeproj 
+        -scheme GOMS-iOS 
+        -destination 'platform=iOS Simulator,name=iPhone 11 Pro,OS=15'
