--- a/.github/workflows/test_on_master.yml
+++ b/.github/workflows/test_on_master.yml
@@ -10,6 +10,12 @@ jobs:
   build:
 
     runs-on: macos-latest
+    
+    env: 
+      DECRYPTED_PROVISION_FILE_PATH: ${{ '.github/distribution.cer' }}
+      ENCRYPTED_PROVISION_FILE_PATH: ${{ '.github/distribution.cer.gpg' }}
+      PROVISION_ENCRYPTION_PWD: ${{ secrets.PROVISION_ENCRYPTION_PWD }}     
+
 
     steps:
     - uses: actions/checkout@v2
