--- a/.github/workflows/test_on_master.yml
+++ b/.github/workflows/test_on_master.yml
@@ -14,8 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run tests
       run: | 
-        pod install --repo-update --clean-install --project-directory=GOMS-iOS/
-        xcodebuild clean test -workspace GOMS-iOS/GOMS-iOS.xcworkspace 
+        xcodebuild clean test -project GOMS-iOS/GOMS-iOS.xcodeproj 
         -scheme GOMS-iOS 
         -destination 'platform=iOS Simulator,name=iPhone 11 Pro,OS=15'
 
