--- a/.github/workflows/test_on_master.yml
+++ b/.github/workflows/test_on_master.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run tests
       run: | 
-        xcodebuild clean test -project GOMS-iOS/GOMS-iOS.xcodeproj 
+        xcodebuild clean test -project GOMS-iOS.xcodeproj 
         -scheme GOMS-iOS 
         -destination 'platform=iOS Simulator,name=iPhone 11 Pro,OS=15'
 
