--- a/GOMS-iOS/Info.plist
+++ b/GOMS-iOS/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>c6731e83059f4decaaa5b6a79c75320c306471f896da4284811f02bdcfeb7f94</string>
+	<key>REDIREDCT_URI</key>
+	<string>https://port-0-goms-backend-nx562olfamh7iw.sel3.cloudtype.app/</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SF-Pro-Text-Medium.otf</string>
