--- a/GOMS-iOS/Info.plist
+++ b/GOMS-iOS/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>QR코드 스캔을 위해 카메라 권한을 허용해주세요</string>
 	<key>CLIENT_ID</key>
 	<string>c6731e83059f4decaaa5b6a79c75320c306471f896da4284811f02bdcfeb7f94</string>
 	<key>REDIREDCT_URI</key>
