:sparkles: Change :: QRCode 라이브러리 변경

--- a/GOMS-iOS.xcworkspace/xcshareddata/xcschemes/GOMS-iOS-Workspace.xcscheme
+++ b/GOMS-iOS.xcworkspace/xcshareddata/xcschemes/GOMS-iOS-Workspace.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F66C9385E26BB33EE2931DFB"
-               BuildableName = "GOMS_iOS.app"
+               BuildableName = "GOMS.app"
                BlueprintName = "GOMS-iOS"
                ReferencedContainer = "container:GOMS-iOS.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F66C9385E26BB33EE2931DFB"
-            BuildableName = "GOMS_iOS.app"
+            BuildableName = "GOMS.app"
             BlueprintName = "GOMS-iOS"
             ReferencedContainer = "container:GOMS-iOS.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F66C9385E26BB33EE2931DFB"
-            BuildableName = "GOMS_iOS.app"
+            BuildableName = "GOMS.app"
             BlueprintName = "GOMS-iOS"
             ReferencedContainer = "container:GOMS-iOS.xcodeproj">
          </BuildableReference>
