--- a/GOMS-iOS.xcodeproj/xcshareddata/xcschemes/GOMS-iOS.xcscheme
+++ b/GOMS-iOS.xcodeproj/xcshareddata/xcschemes/GOMS-iOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F66C9385E26BB33EE2931DFB"
-               BuildableName = "GOMS_iOS.app"
+               BuildableName = "GOMS.app"
                BlueprintName = "GOMS-iOS"
                ReferencedContainer = "container:GOMS-iOS.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F66C9385E26BB33EE2931DFB"
-            BuildableName = "GOMS_iOS.app"
+            BuildableName = "GOMS.app"
             BlueprintName = "GOMS-iOS"
             ReferencedContainer = "container:GOMS-iOS.xcodeproj">
          </BuildableReference>
@@ -63,7 +63,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F66C9385E26BB33EE2931DFB"
-            BuildableName = "GOMS_iOS.app"
+            BuildableName = "GOMS.app"
             BlueprintName = "GOMS-iOS"
             ReferencedContainer = "container:GOMS-iOS.xcodeproj">
          </BuildableReference>
